--- a/trunk/builder/releng.builder/build.properties
+++ b/trunk/builder/releng.builder/build.properties
@@ -42,15 +42,15 @@ collectingFolder=${archivePrefix}
 # By default the value is *,*,*
 configs = *, *, *
 #configs=win32, win32, x86 & \
-#	linux, gtk, ppc &\
+#       linux, gtk, ppc &\
 # linux, gtk, x86 & \
-#	linux, gtk, x86_64 & \
-#	linux, motif, x86 & \
-#	solaris, motif, sparc & \
-#	solaris, gtk, sparc & \
-#	aix, motif, ppc & \
-#	hpux, motif, PA_RISC & \
-#	macosx, carbon, ppc
+#       linux, gtk, x86_64 & \
+#       linux, motif, x86 & \
+#       solaris, motif, sparc & \
+#       solaris, gtk, sparc & \
+#       aix, motif, ppc & \
+#       hpux, motif, PA_RISC & \
+#       macosx, carbon, ppc
 
 # By default PDE creates one archive (result) per entry listed in the configs property.
 # Setting this value to true will cause PDE to only create one output containing all 
@@ -62,16 +62,16 @@ configs = *, *, *
 #The format of the archive. By default a zip is created using antZip.
 #The list can only contain the configuration for which the desired format is different than zip.
 #archivesFormat=win32, win32, x86 - antZip& \
-#	linux, gtk, ppc - antZip &\
+#       linux, gtk, ppc - antZip &\
 #    linux, gtk, x86 - antZip& \
-#	linux, gtk, x86_64 - antZip& \
+#       linux, gtk, x86_64 - antZip& \
 # linux, motif, x86 - antZip& \
-#	solaris, motif, sparc - antZip& \
-#	solaris, gtk, sparc - antZip& \
-#	aix, motif, ppc - antZip& \
-#	hpux, motif, PA_RISC - antZip& \
-#	macosx, carbon, ppc - antZip
-	
+#       solaris, motif, sparc - antZip& \
+#       solaris, gtk, sparc - antZip& \
+#       aix, motif, ppc - antZip& \
+#       hpux, motif, PA_RISC - antZip& \
+#       macosx, carbon, ppc - antZip
+        
 #Set to true if you want the output to be ready for an update jar (no site.xml generated)
 #outputUpdateJars = false
 
@@ -82,7 +82,7 @@ configs = *, *, *
 #jnlp.j2se=<j2se version>
 #jnlp.locale=<a locale>
 #jnlp.generateOfflineAllowed=true or false generate <offlineAllowed/> attribute in the generated features
-#jnlp.configs=${configs}			#uncomment to filter the content of the generated jnlp files based on the configuration being built
+#jnlp.configs=${configs}                        #uncomment to filter the content of the generated jnlp files based on the configuration being built
 
 #Set to true if you want to sign jars
 #signJars=false
@@ -237,10 +237,14 @@ p2Repository=${buildDirectory}/buildRepo
 generate.p2.metadata=true
 
 p2.metadata.repo.name=ChromeDevTools Updates
+p2.metadata.repo=file:/${p2Repository}
 p2.artifact.repo.name=ChromeDevTools Artifacts
+p2.artifact.repo=file:/${p2Repository}
 p2.flavor=tooling
-
 p2.publish.artifacts=true
-p2.gathering=true
-p2.build.repo=file:/${p2Repository}
 p2.category.definition=file:${base}/category.xml
+
+# TODO uncomment these when Eclipse allows to specify
+# repository names with p2.gathering=true
+#p2.gathering=true
+#p2.build.repo=file:/${p2Repository}
