--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -7,3 +7,5 @@ providerName = The Chromium Authors
 pluginName = Chromium JavaScript Remote Debugger UI
 
 launchName = Chromium JavaScript
+
+ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
