--- a/builder/build.xml
+++ b/builder/build.xml
@@ -8,54 +8,53 @@
 
 <project name="chromedevtools" default="main" basedir=".">
 
-  <!-- Where the PDE builder (releng) Eclipse installation resides -->
-  <property name="eclipseLocation" value="C:\eclipse3.5" />
-
-  <!-- The PDE build plugin version in the releng Eclipse installation -->
-  <property name="pdeBuildPlugin.version" value="3.5.0.v20090527-1800" />
-  <property name="pdeBuildPlugin.location" value="${eclipseLocation}/plugins/org.eclipse.pde.build_${pdeBuildPlugin.version}" />
-
-  <!-- The Equinox launcher plugin version in the releng Eclipse installation -->
-  <property name="launcherPlugin.version" value="1.0.200.v20090520" />
-  <property name="launcherPlugin.location" value="${eclipseLocation}/plugins/org.eclipse.equinox.launcher_${launcherPlugin.version}.jar" />
-
-  <!-- The location of rt.jar in the build environment -->
-  <property name="java.rt" value="C:\jdk6\jre\lib\rt.jar" />
-
   <!-- The source repository location (where the plugins and features folders are) -->
-  <property name="sourceBaseLocation" value="D:\Dev\chromedevtools\trunk" />
+  <property name="sourceBaseLocation" value="${basedir}/.." />
 
   <!-- The location of the PDE build configuration -->
-  <property name="builder" value="${sourceBaseLocation}/builder/releng.builder" />
+  <property name="builder" value="${basedir}/releng.builder" />
 
-  <!-- The location of the Eclipse installation against which the project -->
-  <!-- will be compiled.                                                  -->
-  <!-- It is recommended to use a distinct target Eclipse installation    -->
-  <!-- but for the sake of simplicity we are using the releng one.        -->
-  <property name="baseLocation" value="${eclipseLocation}" />
+  <!-- This is a destination directory -->
+  <property name="buildDirectory" value="${sourceBaseLocation}/../staging" />
 
-  <property file="${builder}/build.properties" />
+
+  <!-- Where the PDE builder (releng) Eclipse installation resides. We run -->
+  <!-- this Eclipse for building -->
+  <property name="pdeEclipseLocation" value="FILL THIS VALUE" />
+
+  <!-- The location of the target Eclipse installation: that against which -->
+  <!-- he project will be compiled.                                        -->
+  <!-- It is recommended to use a distinct target Eclipse installation     -->
+  <!-- but for the sake of simplicity we are using the releng one.         -->
+  <property name="baseLocation" value="${pdeEclipseLocation}" />
+
+  <!-- The location of rt.jar in the build environment -->
+  <property name="java.rt" value="FILL THIS VALUE" />
+
 
   <target name="main">
-    <java classname="org.eclipse.equinox.launcher.Main" fork="true" failonerror="true">
+    <exec executable="${pdeEclipseLocation}/eclipse" failonerror="true">
       <arg value="-application" />
-      <arg value="org.eclipse.ant.core.antRunner" />
-      <arg value="-buildfile" />
-      <arg value="${pdeBuildPlugin.location}/scripts/build.xml" />
-      <arg value="-DbaseLocation=${baseLocation}" />
-      <arg value="-Dbuilder=${builder}" />
-      <arg value="-Djava.rt=${java.rt}" />
+      <arg value="org.eclipse.pde.build.Build" />
+      <arg value="-nosplash" />
       <arg value="-DsourceBaseLocation=${sourceBaseLocation}" />
-      <classpath>
-        <pathelement location="${launcherPlugin.location}" />
-      </classpath>
-    </java>
+      <arg value="-Dbuilder=${builder}" />
+      <arg value="-DbaseLocation=${baseLocation}" />
+      <arg value="-Djava.rt=${java.rt}" />
+      <arg value="-DbuildDirectory=${buildDirectory}" />
+    </exec>
   </target>
 
   <target name="clean">
-    <delete dir="${buildDirectory}"/>
+    <exec executable="${pdeEclipseLocation}/eclipse" failonerror="true">
+      <arg value="clean" />
+      <arg value="-application" />
+      <arg value="org.eclipse.pde.build.Build" />
+      <arg value="-nosplash" />
+      <arg value="-Dbuilder=${builder}" />
+      <arg value="-DbuildDirectory=${buildDirectory}" />
+    </exec>
   </target>
 
+
 </project>
-
-
