--- a/builder/releng.builder/build.properties
+++ b/builder/releng.builder/build.properties
@@ -237,9 +237,9 @@ p2Repository=${buildDirectory}/buildRepo
 generate.p2.metadata=true
 
 p2.metadata.repo.name=ChromeDevTools Updates
-p2.metadata.repo=file:/${p2Repository}
+p2.metadata.repo=file:${p2Repository}
 p2.artifact.repo.name=ChromeDevTools Artifacts
-p2.artifact.repo=file:/${p2Repository}
+p2.artifact.repo=file:${p2Repository}
 p2.flavor=tooling
 p2.publish.artifacts=true
 p2.category.definition=file:${base}/category.xml
@@ -248,4 +248,4 @@ p2.category.definition=file:${base}/category.xml
 # repository names with p2.gathering=true
 # You need to fix them manually.
 p2.gathering=true
-p2.build.repo=file:/${p2Repository}
+p2.build.repo=file:${p2Repository}
