--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -6,6 +6,7 @@ providerName = The Chromium Authors
 
 pluginName = Chromium JavaScript Remote Debugger UI
 
-launchName = Chromium JavaScript
+chromiumLaunchName = Chromium JavaScript
+standaloneV8LaunchName = Standalone V8 VM 
 
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
