--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+plugins/org.chromium.debug.core/.settings
 plugins/org.chromium.debug.core/bin
+plugins/org.chromium.debug.ui/.settings
 plugins/org.chromium.debug.ui/bin
+plugins/org.chromium.sdk.tests/.settings
 plugins/org.chromium.sdk.tests/bin
 plugins/org.chromium.sdk/.settings
 plugins/org.chromium.sdk/bin
