--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -11,3 +11,5 @@ standaloneV8LaunchName = Standalone V8 VM
 consolePseudoLaunchName = Browser Connection
 
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
+
+OpenFunctionAction.label = Open Function
