--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -8,6 +8,7 @@ pluginName = Chromium JavaScript Remote Debugger UI
 
 chromiumLaunchName = Chromium JavaScript
 standaloneV8LaunchName = Standalone V8 VM
+wipLaunchName = WebInspector Protocol (WIP)
 consolePseudoLaunchName = Browser Connection
 
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
